# koe

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
e2e/: app.spec.ts  thought-window.spec.ts  voice-flow.spec.ts
scripts/: dev.js  generate-icons.sh  release.js  tauri-dev.js
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  talon.rs  voice.rs
src/components/CharacterCreator/: CharacterCreator.css  CharacterCreator.tsx  index.ts
src/components/CharacterSelector/: CharacterSelector.css  CharacterSelector.tsx  index.ts
src/components/ControlSurface/: ControlSurface.css  ControlSurface.tsx  index.ts
src/components/Settings/: Settings.css  (+5 more)
src/hooks/: index.ts  useKeyboard.test.ts  useKeyboard.ts  useVoice.test.ts  useVoice.ts  useWindowRestore.ts  useWindows.ts
src/models/: character.ts  types.test.ts  types.ts
src/services/: auth.ts  elevenLabs.ts  exportImport.ts  imageGen.ts  index.ts  llm.test.ts  llm.ts  logger.ts  sounds.ts  tts.ts
src/store/: authStore.test.ts  authStore.ts  characterStore.ts  index.ts  settingsStore.test.ts  settingsStore.ts  toastStore.ts  windowStore.test.ts  windowStore.ts
src/styles/: globals.css  themes.ts
src/sync/: characterSync.ts  firebaseConfig.ts  firebaseSync.ts  index.ts  yjsProvider.test.ts  yjsProvider.ts
src/test/: setup.ts  voiceTestUtils.ts
(+30 files in other folders)
