[package]
name = "koe"
version = "0.1.0"
description = "Voice-first thinking app"
authors = ["you"]
edition = "2021"

[lib]
name = "koe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Voice capture
cpal = "=0.15.2"
coreaudio-sys = "=0.2.16"
hound = "3.5"
parking_lot = "0.12"
lazy_static = "1.4"

# Whisper transcription
whisper-rs = { version = "0.12", optional = true }

# HTTP client for API fallback
reqwest = { version = "0.11", features = ["json", "multipart", "blocking"] }
base64 = "0.21"

# Logging
chrono = "0.4"

# System paths (for Talon integration)
dirs = "5.0"

[features]
default = []
whisper-local = ["whisper-rs"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
